# TousAntiCovid

./: .gitignore  LICENSE  README.md
covid-simu/: default-ipython.py  pyproject.toml
ideas/: README.md  hola.c
metrics/: corrected_posteriors_20_10_05.csv  distribucion.txt  init_posterior_counts.csv  init_posterior_probs.csv  posteriors_20_10_05.csv  posteriors_20_15_05.csv  posteriors_20_20_05.csv  probability_analysis.py  randint.csv
rapport/: rapport_ABHAY_MAGANA.Rmd  rapport_résumé_ABHAY_MAGANGA.Rmd
reference/09_singly_linked_list/: README.txt
reference/09_singly_linked_list/src/: Makefile  libraries.h  singly_linked_list.c  singly_linked_list.h  singly_linked_list_useage.c
reference/13_binary_tree/: README.txt
reference/13_binary_tree/src/: Makefile  binary_tree.c  binary_tree.h  binary_tree_useage.c  libraries.h  parsing.c  parsing.h  simple_random.h
reference/21_SDL_ppm_graphics/: README.txt
reference/26_Mersenne_Twister/: LISEZ-MOI.txt  README.txt
src/: .Rhistory  Makefile  SDL_ppm_graphics.c  SDL_ppm_graphics.h  aux_math.c  aux_math.h  constants.h  datastructures.c  datastructures.h  dev_random.c  display.c  display.h  dynamics.c  dynamics.h  libraries.h  main_program.c  mersenne_twister.c  mersenne_twister.h  parsing.c  parsing.h  probabilities.c  probabilities.h  sdl1.c  simple_random.c  simulation.c  simulation.h  singly_linked_list.c  singly_linked_list.h  visualization.c  visualization.h
src/graphics/: sdl1.c
src/original/: Makefile  aux_math.h  dev_random.h  libraries.h  mersenne_twister.c  mersenne_twister.h
(+18 files in other folders)
