[tool.poetry]
name = "covid-simu"
version = "0.1.0"
description = "Utilities to perform statistical analysis of a COVID-19 simulation"
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
